# blockmatrix

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
blockmatrix/: __init__.py  blockmatrix.py  utils.py  visualization.py
examples/: main_example_blocktoeplitz_kronecker.py  main_spatiotemporal_manipulations.py
res/: example_dat.npz  example_dat_with_alpha_targetswithmeans.npz
tests/: test_blockmatrix.py
