[tool.poetry]
name = "blockmatrix"
version = "0.1.0"
description = ""
authors = ["Jan Sosulski <mail@jan-sosulski.de>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"
toeplitz = "^0.3.2"
mne = "^0.24.1"
vg = "^2.0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
