[tool.poetry]
name = "blockmatrix"
version = "0.3.0"
description = "Utilities to handle blockmatrices, especially covariance matrices."
authors = ["Jan Sosulski <mail@jan-sosulski.de>"]
keywords = ["block matrix", "numpy", "spatio-temporal data"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/jsosulski/blockmatrix"
repository = "https://github.com/jsosulski/blockmatrix"
include = [
	"LICENSE"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"

toeplitz = {version="^0.3.2", optional = true}

[tool.poetry.extras]
solver = ["toeplitz"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
